--- a/CSS/style.css
+++ b/CSS/style.css
@@ -515,6 +515,36 @@ body{
     color: #fff;
 }
 
+.newsletter{
+    background: url(../Images/reading_book_background.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.newsletter form{
+    max-width: 45rem;
+    margin-left: auto;
+    text-align: center;
+    padding: 5rem 0;
+}
+
+.newsletter form h3{
+    font-size: 2.2rem;
+    color: #fff;
+    padding-bottom: .7rem;
+    font-weight: normal;
+}
+
+.newsletter form .box{
+    width: 100%;
+    margin: .7rem 0;
+    padding: 1rem 1.2rem;
+    font-size: 1.6rem;
+    color: var(--black);
+    border-radius: .5rem;
+    text-transform: none;
+}
 
 
 
@@ -602,6 +632,15 @@ body{
 
     .header .header-1 .search-form.active{
         top: 115%;
+    }
+
+    .newsletter{
+        background-position: center;
+    }
+
+    .newsletter form{
+        margin-left: 0;
+        max-width: 100%;
     }
 }
 
