--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,7 +20,6 @@
     text-decoration: none;
     text-transform: capitalize;
     transition: all 0.2s linear;
-    transition: width none;
 
 }
 
@@ -50,7 +49,7 @@ section{
     padding: 5rem 9%;
 }
 
-/* ok */
+/* Heading styles */
 
 .heading{
     text-align: center;
@@ -61,11 +60,11 @@ section{
 .heading::before{
     content: '';
     position: absolute;
-    top: 50% ; 
+    top: 50%; 
     left: 0;
     transform: translateY(-50%);
     width: 100%;
-    height: .01rem;
+    height: .1rem;
     background: rgba(0,0,0,.1);
     z-index: -1;
 }
@@ -192,7 +191,7 @@ section{
     z-index: 1000;
 }
 
-/* ok */
+/* Body height for scrolling */
 body{
     height: 300rem;
 
@@ -338,7 +337,7 @@ body{
 
 
 .home{
-    background: url("../Images\background.jpg") no-repeat;
+    background: url("../Images/background.jpg") no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -579,8 +578,7 @@ body{
 
 
 
-/* s  */
-/* media queries  */
+/* Media queries for responsive design */
 @media (max-width:991px){
     html{
         font-size: 55%;
@@ -649,6 +647,4 @@ body{
     html{
         font-size: 50%;
     }
-   
 }
-
