--- a/CSS/style.css
+++ b/CSS/style.css
@@ -624,6 +624,45 @@ body{
 
 
 
+.deal{
+   background: #f3f3f3;
+   display: flex;
+   align-items: center;
+   flex-wrap: wrap;
+   gap: 1.5rem;
+}
+.deal .content{
+    flex:1 1 42rem;
+}
+
+.deal .image{
+    flex:1 1 42rem;
+}
+.deal .image img{
+    width: 100%;
+}
+
+.deal .content h3{
+    color: var(--green);
+    font-size: 2.5rem;
+    padding-bottom: .5rem;
+
+}
+
+.deal .content .h1{
+    font-size: 4rem;
+    color: var(--black);
+}
+.deal .content .p{
+    padding: 1rem 0;
+    color: var(--linet-color);
+    font-size: 1.4rem;
+    line-height: 2;
+}
+
+
+
+
 
 
 
