--- a/CSS/style.css
+++ b/CSS/style.css
@@ -90,6 +90,19 @@ section{
 
 }
 
+.cart-btn{
+    margin-top: 1rem;
+    display: inline-block;
+    padding: .9rem 3rem;
+    border-radius: .5rem;
+    color: #fff;
+    background: var(--green);
+    font-size: 1.7rem; 
+    cursor: pointer;
+    font-weight: 500;
+
+}
+
 
 .btn:hover{
     background: var(--dark-color);
